# KMS

./: .gitignore  README.md  pyproject.toml
apps/knowledge/: admin.py  models.py  mutations.py  schema.py  serializers.py  type.py  urls.py  views.py
apps/knowledge/migrations/: 0001_initial.py
apps/knowledge/services/: note.py
kms/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
pkg/: permission.py
web/: angular.json  package-lock.json  package.json  tsconfig.json
web/projects/api/: README.md  package.json
web/projects/api/src/lib/: api.module.ts  basic-auth.interceptor.ts  knowledge-api.service.spec.ts  knowledge-api.service.ts  tokens.ts
web/projects/api/src/lib/models/: knowledge.model.ts
web/projects/knowledge/: karma.conf.js
web/projects/knowledge/e2e/src/: app.e2e-spec.ts
web/projects/knowledge/src/: index.html  styles.scss  theme.less
web/projects/knowledge/src/app/: app-routing.module.ts  app.component.html  app.module.ts
web/projects/knowledge/src/app/pages/notes/: notes-routing.module.ts  notes.component.ts  notes.module.ts
web/projects/knowledge/src/app/pages/notes/components/note-edit/: note-edit.component.html  note-edit.component.ts
web/projects/knowledge/src/app/pages/overview/: overview-routing.module.ts  overview.component.html  overview.component.ts  overview.module.ts
web/projects/knowledge/src/app/pages/scopes/: scopes-routing.module.ts  scopes.component.html  scopes.component.scss  scopes.component.ts  scopes.module.ts
web/projects/knowledge/src/app/shared-knowledge/: shared-knowledge.module.ts
(+21 files in other folders)
