[tool.poetry]
name = "kms"
version = "0.1.0"
description = "Simple KMS to keep kw"
authors = ["gelleson"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"
djangorestframework = "^3.12.1"
Markdown = "^3.3"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
